# pcl-pepper

./: .gitignore  CMakeLists.txt  Makefile  Viewer.cpp  Viewer.h  convert.cpp  get_all_image.py  get_depth_image.py  get_pcd.py  main.cpp  openni_test.cpp  qiproject.xml  visualizer.cpp
.qi/: qibuild.xml
.qi/deploy-atom/: deploy_manifest.txt  remote_gdbserver.sh  setup.gdb  setup_target.gdb
